--- a/client/src/components/category/style.css
+++ b/client/src/components/category/style.css
@@ -1,5 +1,5 @@
 .water-marker-inner {
-  background-color: #1E90FF;
+  background-color: #1e90ff;
   width: 30px;
   height: 30px;
   border-radius: 15px;
